# FINCHECK-AI

./: .dockerignore  .replit  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  sample_financial_data.csv  vite.config.ts
attached_assets/: Pasted-You-are-a-senior-full-stack-engineer-fintech-product-ar_1769916376503.txt
backend/: Dockerfile  auth_middleware.py  config.py  main.py  requirements.txt
backend/routes/: analysis.py  auth.py  benchmarks.py  insights.py  profile.py  upload.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: BenchmarkComparison.tsx  FileUpload.tsx  InsightsPanel.tsx  LanguageToggle.tsx  Logo.tsx  MetricCard.tsx  ScoreGauge.tsx  ThemeToggle.tsx
client/src/context/: AuthContext.tsx  LanguageContext.tsx
client/src/lib/: api.ts  pdf-report.ts  supabase.ts  translations.ts
client/src/pages/: auth.tsx  dashboard.tsx  landing.tsx
server/: routes.ts
